--- a/index.html
+++ b/index.html
@@ -36,6 +36,16 @@
                 <div class="textSnippet">Sollte Kompany wirklich zu den Bayern Wechseln kann es jetzt alles zimlich schnell gehen... Bayern sei bereits in Verhandlung mit Kompanys Management.</div>
             </header>
         </div>
+        <div class="bar">
+            
+        </div>
+        <div class="container-articles">
+            <header>
+                <div class="category">TAKTIKEN</div>
+                <div class="title">WIE LÄSST XABI ALONSO SPIELEN?</div>
+                <div class="textSnippet">Wie hat Xabo Alonso es geschafft Leverkusen zu einer Meistermannschaft zu formen...</div>
+            </header>
+        </div>
     </div>
 
 
