category navigation bar

--- a/index.html
+++ b/index.html
@@ -36,8 +36,22 @@
                 <div class="textSnippet">Sollte Kompany wirklich zu den Bayern Wechseln kann es jetzt alles zimlich schnell gehen... Bayern sei bereits in Verhandlung mit Kompanys Management.</div>
             </header>
         </div>
-        <div class="bar">
-            
+        <div class="container-categorys">
+            <i class="fa-solid fa-envelope-open-text" id="category-news">
+                <span class="span-category">News</span>
+            </i>
+            <i class="fa-solid fa-right-left" id="category-transfer">
+                <span class="span-category">Transfers</span>
+            </i>
+            <i class="fa-solid fa-table-list" id="category-table">
+                <span class="span-category">Tabelle</span>
+            </i>
+            <i class="fa-solid fa-circle-dot" id="category-live">
+                <span class="span-category">Live Spiele</span>
+            </i>
+            <i class="fa-solid fa-box-archive" id="category-archiv">
+                <span class="span-category">Archiv</span>
+            </i>
         </div>
         <div class="container-articles">
             <header>
