header, daily news container, article container

--- a/index.html
+++ b/index.html
@@ -5,64 +5,88 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css">
     <link rel="stylesheet" href="style.css">
-    <title>Blog</title>
+    <title>Rückpass</title>
 </head>
-<body id="body">
+<body>
+    <header id="header">
+        <nav class="navbar flex">
+            <div class="logo flex">
+                <div class="logo-image">
+                    <img src="/assets/img/logo.png" alt="">
+                </div>
+                <a href="/"><h1>RÜCKPASS</h1></a>
+            </div>
+            <div class="navlist flex">
+                <ul class="flex">
+                    <li><a href="/"><i class="fa-solid fa-envelope-open-text"></i>NEWS</a></li>
+                    <li><a href="/"><i class="fa-solid fa-right-left"></i>TRANSFERS</a></li>
+                    <li><a href="/"><i class="fa-solid fa-newspaper"></i>ARTIKEL</a></li>
+                    <li><a href="/"><i class="fa-solid fa-circle-dot"></i>SPIELE</a></li>
+                    <li><a href="/"><i class="fa-solid fa-box-archive"></i>ARCHIV</a></li>
+                    <li><a href="/"><i class="fa-solid fa-user"></i>USER</a></li>
+                </ul>
+            </div>
+        </nav>
+    </header>
 
-    <section id="header">
-        <img src="/assets/img/logo.jpg" class="logo" alt="">
-
-        <div>
-            <ul id="nav">
-                <li><a href="index.html">Home</a></li>
-                <li><a href="index.html">Artikel</a></li>
-                <li><a href="index.html">Transfergerüchte</a></li>
-                <li>
-                    <label class="switch">
-                        <input type="checkbox" id="switch-mode">
-                        <span></span>
-                    </label>
-                </li>
-            </ul>
-        </div>
-    </section>
-
-    
-    <div class="container">
+    <div class="container-main">
         <div class="container-daily">
-            <header>
-                <div class="category">TRANSFERGERÜCHTE</div>
-                <div class="title">KOMPANY ZU BAYERN?</div>
-                <div class="textSnippet">Sollte Kompany wirklich zu den Bayern Wechseln kann es jetzt alles zimlich schnell gehen... Bayern sei bereits in Verhandlung mit Kompanys Management.</div>
-            </header>
-        </div>
-        <div class="container-categorys">
-            <i class="fa-solid fa-envelope-open-text" id="category-news">
-                <span class="span-category">News</span>
-            </i>
-            <i class="fa-solid fa-right-left" id="category-transfer">
-                <span class="span-category">Transfers</span>
-            </i>
-            <i class="fa-solid fa-table-list" id="category-table">
-                <span class="span-category">Tabelle</span>
-            </i>
-            <i class="fa-solid fa-circle-dot" id="category-live">
-                <span class="span-category">Live Spiele</span>
-            </i>
-            <i class="fa-solid fa-box-archive" id="category-archiv">
-                <span class="span-category">Archiv</span>
-            </i>
+
+            <div class="container-daily-news">
+                <img src="/assets/img/daily.jpg" alt="">
+                <div class="daily-header"><h2>DAILY NEWS</h2></div>
+                <span class="daily-category">TRANSFERGERÜCHTE</span>
+                <div class="container-daily-infos">
+                    <span class="daily-title"><h3>KOMPANY ALS NEUER BAYERNTRAINER ?</h3></span>
+                        <span class="daily-subtext">
+                        Sollte Kompany wirklich zu den Bayern Wechseln kann es jetzt alles zimlich schnell gehen...
+                        Bayern sei bereits in Verhandlung mit Kompanys Management.
+                    </span>
+                </div>
+            </div>
+
+            <div class="container-games">
+                <span>Bundesliga</span>
+            </div>
         </div>
         <div class="container-articles">
-            <header>
-                <div class="category">TAKTIKEN</div>
-                <div class="title">WIE LÄSST XABI ALONSO SPIELEN?</div>
-                <div class="textSnippet">Wie hat Xabo Alonso es geschafft Leverkusen zu einer Meistermannschaft zu formen...</div>
-            </header>
+            <div class="article">
+                <img src="/assets/img/tactics_1.png" alt="">
+                <span class="article-category">TRANSFERGERÜCHTE</span>
+                    <div class="container-article-infos">
+                        <span class="article-title"><h4>Wie lässt Xabi Alonso spielen ?</h4></span>
+                        <span class="article-subtext">
+                            Xabi Alonso hat bei Leverkusen ein Spielsystem implementiert, in dem jeder Spieler sein maximales Potential
+                            abrufen kann. Wir gehen näher auf seine Taktik ein...
+                        </span>
+                    </div>
+            </div>
+
+            <div class="article">
+                <img src="/assets/img/tactics_1.png" alt="">
+                <span class="article-category">TRANSFERGERÜCHTE</span>
+                    <div class="container-article-infos">
+                        <span class="article-title"><h4>Wie lässt Xabi Alonso spielen ?</h4></span>
+                        <span class="article-subtext">
+                            Xabi Alonso hat bei Leverkusen ein Spielsystem implementiert, in dem jeder Spieler sein maximales Potential
+                            abrufen kann. Wir gehen näher auf seine Taktik ein...
+                        </span>
+                    </div>
+            </div>
+
+            <div class="article">
+                <img src="/assets/img/tactics_1.png" alt="">
+                <span class="article-category">TRANSFERGERÜCHTE</span>
+                    <div class="container-article-infos">
+                        <span class="article-title"><h4>Wie lässt Xabi Alonso spielen ?</h4></span>
+                        <span class="article-subtext">
+                            Xabi Alonso hat bei Leverkusen ein Spielsystem implementiert, in dem jeder Spieler sein maximales Potential
+                            abrufen kann. Wir gehen näher auf seine Taktik ein...
+                        </span>
+                    </div>
+            </div>
         </div>
     </div>
-
-
 
 
     <script src="script.js"></script>
