responsive design, toggle menu

--- a/index.html
+++ b/index.html
@@ -9,10 +9,16 @@
 </head>
 <body>
     <header id="header">
-        <nav class="navbar flex">
-            <div class="logo flex">
-                    <img src="/assets/img/logo.png" alt="">
-                <a href="/"><h1>RÜCKPASS</h1></a>
+        <nav class="navbar ">
+            <div class="container-header">
+                <input type="checkbox" id="checkbox-toggle">
+                <label for="checkbox-toggle" class="checkboxIc">
+                    <i class="fa-solid fa-bars" id="checkbox-icon"></i>
+                </label>
+                <div class="logo flex">
+                        <img src="/assets/img/logo.png" alt="">
+                    <a href="/"><h1>RÜCKPASS</h1></a>
+                </div>
             </div>
             <div class="navlist flex">
                 <ul class="flex">
@@ -145,6 +151,17 @@
                         <span class="article-subtext">
                             Der BVB soll schon länger an einer Verpflichtung von Serhou Guirassy interessiert sein. Laut Medienberichten
                             soll es auch schon ein erstes Angebot gegeben haben...
+                        </span>
+                    </div>
+            </div>
+
+            <div class="article">
+                <img src="/assets/img/article_3.jpg" alt="">
+                <span class="article-category">TAKTIK</span>
+                    <div class="container-article-infos">
+                        <span class="article-title"><h4>Wie lässt Sebastian Hoeneß spielen ?</h4></span>
+                        <span class="article-subtext">
+                            Vom Abstiegskandidaten zum Champions League Teilnehmer...
                         </span>
                     </div>
             </div>
