--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
                 <div class="container-daily-infos">
                     <span class="daily-title"><h3>KOMPANY ALS NEUER BAYERN TRAINER ?</h3></span>
                         <span class="daily-subtext">
-                        Sollte Kompany wirklich zu den Bayern Wechseln kann es jetzt alles zimlich schnell gehen...
+                        Sollte Kompany wirklich zu den Bayern Wechseln kann es jetzt alles ziemlich schnell gehen...
                         Bayern sei bereits in Verhandlung mit Kompanys Management.
                     </span>
                 </div>
